--- a/projects/EmergencyApp.html
+++ b/projects/EmergencyApp.html
@@ -7,6 +7,10 @@
     <link rel="stylesheet" href="../style.css">
 </head>
 <body>
+    <div>
+        <h1>Emergency OnDeman</h1>
+        <p>An emergency app dedicated to students on campus.</p>
+    </div>
     <iframe style="border: 1px solid rgba(0, 0, 0, 0.1); height: 844px; width: 393px" width="844" height="450" src="https://embed.figma.com/proto/CRbK0HsNtVaUu0KzGXS72c/Untitled?node-id=0-3264&node-type=frame&scaling=min-zoom&content-scaling=fixed&page-id=0%3A1&starting-point-node-id=0%3A3264&embed-host=share" allowfullscreen></iframe>
 </body>
 </html>
