--- a/gallery/Index.html
+++ b/gallery/Index.html
@@ -6,12 +6,33 @@
     <title>Document</title>
     <link rel="stylesheet" href="../style.css"> 
 </head>
-<body>
+<body style="background-color: black; background-image: url('../image/Background1.gif'); background-size: cover;">
+    <div class="grid-gallery">
+        <div style="width: 80vw;"></div>
+        <div class="bar-gallery">
+            <div><a href="../index.html" style="color: rgb(0, 0, 0);">HOMEPAGE</a></div>
+            <div><a href="flashlight.html" style="color: rgb(0, 0, 0);">Change Mode</a></div>
+            <div><a href="../Drawing/index.html" style="color: rgb(0, 0, 0);">Drawing</a></div>
+        </div>
+    </div>
+    <!--div class="grid-gallery">
+        <div class="gallery-backdrop">
+            <div class="backdrop">
+                <img src="https://i.pinimg.com/originals/60/ef/1b/60ef1b915313f0e0f1a223a1597a7f35.gif" style="width: 33vw;">
+            </div>
+        </div>
+        <div class="gallery-backdrop">
+            <div class="backdrop">
+                <img src="https://i.pinimg.com/originals/60/ef/1b/60ef1b915313f0e0f1a223a1597a7f35.gif" style="width: 20vw;">
+            </div>
+        </div>
+    </div>-->
+
     <!-- <div style="background-image: url('https://lh5.googleusercontent.com/p/AF1QipP6RV-nPszJf_f4QSFok8XW-TzjfV5Mmhp6mg2J=w1080-h624-n-k-no'); background-repeat: no-repeat; background-size: cover; background-attachment: fixed;"></div> -->
-    <div class="grid">
+    <!--<div class="grid">
         <div><h1>Gallery</h1></div>
         <div><a href="../index.html"><h1>HOMEPAGE</h1></a></div>
-    </div>
+    </div>-->
     <script src="gallery.js"></script>
 </body>
 </html>
