--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css"> 
-    <title>AMY AI's MAKES SPACE</title>
+    <title>AMY AI's Portfolio</title>
 </head>
-<body>
+<body style="background-color: rgb(255, 255, 255);">
    <!--div id="mySidenav" class="sidenav">
         <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
         <a href="#">About</a>
@@ -23,17 +23,46 @@
     </div>
 
     <div class="grid">
-        <div style="padding: 30px; color: rgb(154, 181, 169);"><h1>TITLE IN-PROGRESS</h1></div>
         <div class="flex-parent">
-            <div class="flex-child"><a href="#"><h1>ABOUT</h1></a></div>
-            <div class="flex-child"><a href="gallery/index.html"><h1>GALLERY</h1></a></div>
-            <div class="flex-child"><a href="#"><h1>CONTACT</h1></a></div>
+            <div class="flex-child" style="text-align: right;"><h1>AMY AI</h1></div>
+            <div class="flex-child" style="text-align: left;"><h1>艾咪</h1></div>
+        </div>
+        <div class="flex-parent">
+            <div class="flex-child"><a href="#" style="color: rgb(255, 255, 255);"><h1>ABOUT</h1></a></div>
+            <div class="flex-child"><a href="gallery/index.html" style="color: black;"><h1>GALLERY</h1></a></div>
+            <div class="flex-child"><a href="Drawing/index.html" style="color: black;"><h1>DRAWINGS</h1></a></div>
         </div>
     </div>
 
-    <div style="border: 1px solid rgb(154, 181, 169); margin: 5px; text-align: right; padding: 20px;  color: rgb(154, 181, 169);">
-        <div><h1>INTRO</h1></div>
-        <div>AMY AI IS CURRENTLY A JUNIOR STUDYING INDUSTRIAL DESIGN AT <a href="https://www.risd.edu/academics/industrial-design">RHODE ISLAND SCHOOL OF DESIGN</a>. I AM CURIOUS, FUN, AND ALWAYS EXPLORING NEW IDEAS. I AM DEEPLY CURIOUS ABOUT HOW DESIGN INFLUENCES HUMAN BEHAVIOUR AND HOW HUMAN-CENTRED DESIGN CAN ITERATIVELY EVOLVE TO BETTER MEET USERS' NEEDS. I AM DEEPLY CURIOUS ABOUT HOW DESIGN.</div>
+    <div style="border: 1px solid rgb(255, 255, 255); margin: 5px; padding: 50px;  color: rgb(0, 0, 0); height: 200px;">
+        <div class="flex-parent">
+            <div class="flex-child" style="text-align: left; width: 22vw;">
+                AMY AI IS CURRENTLY A <a style="font-size: 16px;"> THIRD-YEAR </a> STUDYING INDUSTRIAL DESIGN AT <a href="https://www.risd.edu/academics/industrial-design" style="color: black; font-size: 16px;">RHODE ISLAND SCHOOL OF DESIGN</a>.
+            </div>
+            <div style="width: 6vw;"></div>
+            <div class="flex-child" style="text-align: left;">
+                Always CURIOUS, FUN & EXPLORING new ideas.
+                <div style="height: 10px;"></div>
+                *How design influences human behaviour.
+                <br>
+                *How huma-centered design can iteratively
+                <br>evolve to better meetusers' needs.
+            </div>
+            <div style="width: 6vw;"></div>
+            <div class="flex-child" style="width: 30vw; text-align: left; background-image: url('https://i.pinimg.com/originals/66/05/a3/6605a36ab24d182e3e2ab26e12472498.gif'); background-size: contain; height: auto; background-repeat: no-repeat; background-position: right;">
+                <p>Contact Me!</p>
+                <p>
+                    <a href="mailto:aai@risd.edu" style="color: black;">AAI@RISD.EDU</a>
+                </p>
+                <p>
+                    <a href="https://www.linkedin.com/in/amy-ai-a1b466229/" style="color: black;">CONNECT ON LINKEDIN</a>
+                </p>
+               <p>
+                 <a href="https://www.instagram.com/ai_30924/" style="color: black;">SEND ME AN INSTAGRAM DM</a>
+               </p>
+               <div style="height: 40px;"></div>
+            </div>
+        </div>
     </div>
 
     <!--div class="scroll-container">
@@ -51,31 +80,39 @@
     </div-->
 
     <div class="grid" style="margin: 40px; gap: 40px;">
-        <div style="background-color: rgb(154, 181, 169);">
+        <div style="background-color: rgb(0, 0, 0);">
             <a href="projects/WindrunnerJacket.html">
-                <img src="../image/Amy Ai HMG Portfolio (2).svg" alt="Jacket" style="width: 100%; height: 100%; object-fit: cover; object-position: center;">
+                <img src="../image/WindCover.svg" alt="Jacket" style="width: 100%; height: 100%; object-fit: cover; object-position: center;">
             </a>
         </div>
-        <div style="background-color: rgb(154, 181, 169);">
+        <div style="background-color: rgb(0, 0, 0);">
             <a href="projects/WateringCan.html">
-                <img src="../image/Final Presentation (1).svg" alt="WateringCan" style="width: 100%; height: 100%; object-fit: cover; object-position: center;">
+                <img src="../image/HersheyCover.svg" alt="WateringCan" style="width: 100%; height: 100%; object-fit: cover; object-position: center;">
             </a>
         </div>
     </div>
     <div class="grid" style="margin: 40px; gap: 40px;">
-        <div style="background-color: rgb(154, 181, 169);">
+        <div style="background-color: rgb(0, 0, 0);">
             <a href="projects/EmergencyApp.html">
-                <img src="../image/EmergencyOnDemand.svg" alt="Jacket" style="width: 100%; height: 100%; object-fit: cover; object-position: center;">
+                <img src="../image/EODCover.svg" alt="Jacket" style="width: 100%; height: 100%; object-fit: cover; object-position: center;">
             </a>
         </div>
-        <div style="background-color: rgb(154, 181, 169, .5);"></div>
+        <div style="background-color: rgb(0, 0, 0);">
+            <a href="projects/FFB.html">
+                <img src="../image/FFBCover.svg" alt="FFB" style="width: 100%; height: 100%; object-fit: cover; object-position: center;">
+            </a>
+        </div>
     </div>
-    <div class="grid" style="margin: 40px; gap: 40px;">
+    <!-- <div class="grid" style="margin: 40px; gap: 40px;">
         <div style="background-color: rgb(154, 181, 169, .3);"></div>
         <div style="background-color: rgb(154, 181, 169, .2);"></div>
-    </div>
+    </div> -->
 
     <!-- <iframe style="border: 1px solid rgba(0, 0, 0, 0.1); height: 844px; width: 393px" width="800" height="450" src="https://embed.figma.com/proto/CRbK0HsNtVaUu0KzGXS72c/Untitled?node-id=0-3264&node-type=frame&scaling=min-zoom&content-scaling=fixed&page-id=0%3A1&starting-point-node-id=0%3A3264&embed-host=share" allowfullscreen></iframe> -->
+    
+    <div style="text-align: center; font-family: 'Inter'; font-weight: 100;">
+        2024@aaiportfolio.com
+    </div>
 
     <script>
       function openNav() {
