--- a/projects/EmergencyApp.html
+++ b/projects/EmergencyApp.html
@@ -4,12 +4,123 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="../style.css">
+    <link rel="stylesheet" href="../style1.css">
 </head>
-<body>
-    <div>
-        <h1>Emergency OnDeman</h1>
-        <p>An emergency app dedicated to students on campus.</p>
+<body style="background-color: rgb(255, 255, 255);" class="inter">
+    <div class="grid-EOD">
+        <div class="flex-EODchild">
+            <p>Emergency OnDemand<p>
+        </div>
+        <div>
+            <a href="../index.html">Homepage</a>
+        </div>
+    </div>
+
+    <div class="grid-EOD">
+        <div>
+            <img src="../image/EOD2.gif" alt="EOD1" style="max-width: 40vw;">
+        </div>
+        <div>
+            <img src="../image/EOD2.svg" alt="EOD1" style="max-width: 40vw;">
+        </div>
+        <div>
+            <img src="../image/EOD3.svg" alt="EOD1" style="max-width: 40vw;">
+        </div>
+        <div>
+            <img src="../image/EOD3.gif" alt="EOD1" style="max-width: 40vw;">
+        </div>
+        <div>
+            <img src="../image/EOD4.gif" alt="EOD1" style="max-width: 40vw;">
+        </div>
+        <div>
+            <img src="../image/EOD4.svg" alt="EOD1" style="max-width: 40vw;">
+        </div>
+        <div>
+            <img src="../image/EOD5.svg" alt="EOD1" style="max-width: 40vw;">
+        </div>
+        <div>
+            <img src="../image/EOD5.gif" alt="EOD1" style="max-width: 40vw;">
+        </div>
+        <div>
+            <img src="../image/EOD6.gif" alt="EOD1" style="max-width: 40vw;">
+        </div>
+        <div>
+            <img src="../image/EOD6.svg" alt="EOD1" style="max-width: 40vw;">
+        </div>
+    </div>
+
+    <div class="title-inter">
+        Scope
+    </div>
+    <div class="grid-EOD">
+        <div class="text-inter">
+            <p>My Role: Designer</p>
+            <div style="height: 130px;"></div>
+            <p>Project Duration: 2 weeks</p>
+        </div>
+        <div class="text-inter">
+            Responsibility: Conduct observation and interviews with RISD ID students to investigate potential usability issue for emergency cell-phone at the ID building.
+        </div>
+    </div>
+    <div class="title-inter">
+        Overview
+    </div>
+    <div class="image-wall">
+        <img src="https://www.risd.edu/sites/g/files/upbtqy111/files/styles/landscape_16_9_1093x614/public/2022-11/_56A0104.jpg?h=f2fcf546&itok=eGyWNF9Y">
+    </div>
+    <div class="grid-EOD">
+        <div class="paragraph-inter">
+            <a href="https://www.risd.edu/academics/industrial-design">RISD’s Industrial Design</a> is a department with approximately 300 students that helps students become aware of materials and gain an in-depth understanding of visual and 3D vocabulary.
+        </div>
+        <div class="paragraph-inter">
+            Despite being a department encourage student to work on hands on projects, we discovered that students constantly in rush to get their project done for homework often injured themselves with the machinery at the shop.
+        </div>
+        <div>
+            <img src="../image/EOD7.svg" style="width: 50vw;">
+        </div>
+        <div class="paragraph-inter">
+            <p>The emergency cell-phone is an emergency communication tool aim to foster faster communication between injured student for outside professional help.</p>
+            <div class="paragraph-inter" style="color: blue;">
+                <p>- Pickup the phone & Call</p>
+                <p>- Consistent location except at Woodshop</p>
+                <p>- Dialed as emergency call to Public Safety</p>
+            </div>
+        </div>
+    </div>
+    <div class="title-inter">
+        Overview
+    </div>
+    <div class="grid-EOD">
+        <div class="paragraph-inter">
+            To fully understand the issue, we explored student experiences with Emergency Cell-phone through a survey and interviews with 18 people across the ID departments and Public Safety.
+        </div>
+        <div style>
+            <img src="../image/EOD8.svg" alt="EOD1" style="max-width: 35vw; padding: 0px;">
+        </div>
+        <div>
+            <img src="../image/EOD9.svg" alt="EOD1" style="max-width: 55vw;">
+        </div>
+        <div>
+            <p  class="text-inter">What We've Heard:</p>
+            <p  class="paragraph-inter">“If there's a need to call for professional medical help, we usually just use our personal phones or borrow someone else's because it's faster and more convenient.” </p>
+        </div>
+    </div>
+    <div class="image-wall">
+        <div class="grid-EOD"></div>
+        <img src="../image/EOD10.svg" alt="EOD1" style="max-width: 50vw;">
+        <img src="../image/EOD11.svg" alt="EOD1" style="max-width: 90vw;">
+        <img src="../image/EOD12.svg" alt="EOD1" style="max-width: 90vw;
+        ">
+        <img src="../image/EOD13.svg" alt="EOD1" style="max-width: 90vw;">
+        <img src="../image/EOD14.gif" alt="EOD1" style="max-width: 90vw;">
+        <img src="../image/EOD15.svg" alt="EOD1" style="max-width: 90vw;">
+    </div>
+
+    <div class="grid-EOD">
+        <div></div>
+        <div>
+            <iframe style="border: 0px solid rgba(0, 0, 0, 0.1);" width="390" height="840" src="https://embed.figma.com/proto/Eg75JL54h8GZitXkYeltFR/Emergency-App?node-id=282-2720&node-type=frame&scaling=scale-down&content-scaling=responsive&page-id=0%3A1&starting-point-node-id=282%3A2717&embed-host=share" allowfullscreen></iframe>
+        </div>
     </div>
     <iframe style="border: 1px solid rgba(0, 0, 0, 0.1); height: 844px; width: 393px" width="844" height="450" src="https://embed.figma.com/proto/CRbK0HsNtVaUu0KzGXS72c/Untitled?node-id=0-3264&node-type=frame&scaling=min-zoom&content-scaling=fixed&page-id=0%3A1&starting-point-node-id=0%3A3264&embed-host=share" allowfullscreen></iframe>
 </body>
