--- a/projects/WindrunnerJacket.html
+++ b/projects/WindrunnerJacket.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Windrunner Jacket</title>
-    <!-- Link to your CSS file -->
     <link rel="stylesheet" href="../style.css">
 </head>
 <body style="background-color: black; color: white; background-image: url('https://i.pinimg.com/originals/fb/45/fd/fb45fd9b803ad610d6792e6a9012dc09.gif'); background-repeat: none;background-size: cover; background-attachment: fixed;">
@@ -13,11 +12,11 @@
             <h1 style="color: white;">WINDRUNNER JACKET</h1>
         </div>
         <div>
-            <a href="../index.html"><h1>HOMEPAGE</h1></a>
+            <a href="../index.html" style="color: white;"><h1>HOMEPAGE</h1></a>
         </div>
     </div>
-    <div class="grid">
-        <div>*THIS IS AN INDEPENDENT PROJECT AND NOT ENDORSED OR SPONSORED BY SALOMON.</div>
+    <div style="text-align: center; font-weight: 100;">
+        *THIS IS AN INDEPENDENT PROJECT AND NOT ENDORSED OR SPONSORED BY SALOMON.
         <!-- <div style="text-align: left;">REDESIGN THE <a style="text-decoration: underline;">RUNNING EXPERIENCE</a> FOR MIDDLE-AGED INDIVIDUALS (AGED 40-55) WHO FACE <a style="text-decoration: underline;">Extreme WEATHER</a>CHALLENGES DURING OUTDOOR WINTER RUNS. WE AIM TO CREATE A WIND AND WATERPROOF JACKET WITH <a style="text-decoration: underline;">VENTILATION OPENINGS</a> TO ENSURE PROPER AIRFLOW, ENHANCING COMFORT AND ENJOYMENT EVEN IN HARSH CONDITIONS.
         </div> -->
     </div>
