--- a/projects/EmergencyApp.html
+++ b/projects/EmergencyApp.html
@@ -12,7 +12,7 @@
             <p>Emergency OnDemand<p>
         </div>
         <div>
-            <a href="../index.html">Homepage</a>
+            <a href="../index.html" style="color: black;">Homepage</a>
         </div>
     </div>
 
@@ -116,12 +116,12 @@
         <img src="../image/EOD15.svg" alt="EOD1" style="max-width: 90vw;">
     </div>
 
-    <div class="grid-EOD">
-        <div></div>
-        <div>
-            <iframe style="border: 0px solid rgba(0, 0, 0, 0.1);" width="390" height="840" src="https://embed.figma.com/proto/Eg75JL54h8GZitXkYeltFR/Emergency-App?node-id=282-2720&node-type=frame&scaling=scale-down&content-scaling=responsive&page-id=0%3A1&starting-point-node-id=282%3A2717&embed-host=share" allowfullscreen></iframe>
-        </div>
+    <div style="text-align: center;">
+        <iframe style="border: 0px solid rgba(0, 0, 0, 0.1);" width="390" height="840" src="https://embed.figma.com/proto/Eg75JL54h8GZitXkYeltFR/Emergency-App?node-id=282-2720&node-type=frame&scaling=scale-down&content-scaling=responsive&page-id=0%3A1&starting-point-node-id=282%3A2717&embed-host=share" allowfullscreen></iframe>
     </div>
-    <iframe style="border: 1px solid rgba(0, 0, 0, 0.1); height: 844px; width: 393px" width="844" height="450" src="https://embed.figma.com/proto/CRbK0HsNtVaUu0KzGXS72c/Untitled?node-id=0-3264&node-type=frame&scaling=min-zoom&content-scaling=fixed&page-id=0%3A1&starting-point-node-id=0%3A3264&embed-host=share" allowfullscreen></iframe>
+    <!-- <iframe style="border: 1px solid rgba(0, 0, 0, 0.1); height: 844px; width: 393px" width="844" height="450" src="https://embed.figma.com/proto/CRbK0HsNtVaUu0KzGXS72c/Untitled?node-id=0-3264&node-type=frame&scaling=min-zoom&content-scaling=fixed&page-id=0%3A1&starting-point-node-id=0%3A3264&embed-host=share" allowfullscreen></iframe> -->
+     <div style="text-align: center;">
+        <a href="../index.html" style="color: black;">BACK TO HOME PAGE</a>
+     </div>
 </body>
 </html>
