--- a/projects/FFB.html
+++ b/projects/FFB.html
@@ -9,7 +9,7 @@
 <body style="background-color: rgb(227, 207, 207); color: white;">
     <div class="grid">
         <div>
-            <h1 style="color: white;">FFB</h1>
+            <h1 style="color: white;">Flip Fold Bag</h1>
         </div>
         <div>
             <a href="../index.html"><h1>HOMEPAGE</h1></a>
@@ -26,7 +26,7 @@
         <img src="../image/Bag.gif" alt="Bag1" style="max-width: 90vw;">
         <img src="../image/Bag8.svg" alt="Bag1" style="max-width: 90vw;">
         <img src="../image/Bag9.svg" alt="Bag1" style="max-width: 90vw;">
-        <a href="../index.html"><h1>BACK TO HOME PAGE</h1></a>
+        <a href="../index.html" style="text-align: center; color: black;"><h1>BACK TO HOME PAGE</h1></a>
     </div>
     
 </body>
