--- a/projects/WindrunnerJacket.html
+++ b/projects/WindrunnerJacket.html
@@ -33,6 +33,6 @@
         <img src="../image/8.svg" alt="marketing" style="max-width: 80vw; max-height: 100vh;">
         <img src="../image/9.svg" alt="marketing" style="max-width: 80vw; max-height: 100vh;">
     </div>
-    <a href="../index.html"><h1>BACK TO HOME PAGE</h1></a>
+    <a href="../index.html" style="text-align: center; color: rgb(255, 255, 255);"><h1>BACK TO HOME PAGE</h1></a>
 </body>
 </html>
