--- a/projects/WateringCan.html
+++ b/projects/WateringCan.html
@@ -10,7 +10,7 @@
     <div class="grid">
         <div><h1>HERSHEY'S WATERING CAN</h1></div>
         <div>
-            <a href="../index.html"><h1>HOMEPAGE</h1></a>
+            <a href="../index.html" style="color: black;"><h1>HOMEPAGE</h1></a>
         </div>
     </div>
     <div class="image-wall">
@@ -21,5 +21,6 @@
         <img src="../image/Hershey Watering can4.jpg" alt="Jacket" style="max-width: 100vw; max-height: 100vh;">
         <img src="../image/Hershey Watering can5.jpg" alt="Jacket" style="max-width: 100vw; max-height: 100vh;">
     </div>
+    <a href="../index.html" style="text-align: center; color: rgb(0, 0, 0);"><h1>BACK TO HOME PAGE</h1></a>
 </body>
 </html>
