--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <div class="flex-child" style="text-align: left;"><h1>艾咪</h1></div>
         </div>
         <div class="flex-parent">
-            <div class="flex-child"><a href="#" style="color: rgb(255, 255, 255);"><h1>ABOUT</h1></a></div>
+            <div class="flex-child"><a href="about/index.html" style="color: rgb(0, 0, 0);"><h1>ABOUT</h1></a></div>
             <div class="flex-child"><a href="gallery/index.html" style="color: black;"><h1>GALLERY</h1></a></div>
             <div class="flex-child"><a href="Drawing/index.html" style="color: black;"><h1>DRAWINGS</h1></a></div>
         </div>
