--- a/about/index.html
+++ b/about/index.html
@@ -14,7 +14,7 @@
         </div>
         <div class="flex-parent">
             <div class="flex-child"><a href="../index.html" style="color: rgb(0, 0, 0);"><h1>HOME</h1></a></div>
-            <div class="flex-child"><a href="../gallery/index.html" style="color: black;"><h1>GALLERY</h1></a></div>
+            <div class="flex-child"><a href="../gallery/Index.html" style="color: black;"><h1>GALLERY</h1></a></div>
             <div class="flex-child"><a href="../Drawing/index.html" style="color: black;"><h1>DRAWINGS</h1></a></div>
         </div>
     </div>
