--- a/gallery/G7.html
+++ b/gallery/G7.html
@@ -23,7 +23,7 @@
             </div>
             <div style="height: 10vh;"></div>
             <div class="description">
-                <a href="index.html" style="color: rgb(255, 255, 255);">Go Back</a>
+                <a href="Index.html" style="color: rgb(255, 255, 255);">Go Back</a>
             </div>
         </div>
     </div>
