--- a/about/index.html
+++ b/about/index.html
@@ -5,12 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="../style.css"> 
+    <link rel="shortcut icon" type="image/x-icon" href="/image/favicon.ico" />
 </head>
 <body>
     <div class="grid">
         <div class="flex-parent">
-            <div class="flex-child" style="text-align: right;"><h1>AMY AI</h1></div>
-            <div class="flex-child" style="text-align: left;"><h1>艾咪</h1></div>
+            <div class="flex-child" style="text-align: right; color: white;"><h1>AMY AI</h1></div>
+            <div class="flex-child" style="text-align: left; color: white;"><h1>艾咪</h1></div>
         </div>
         <div class="flex-parent">
             <div class="flex-child"><a href="../index.html" style="color: rgb(0, 0, 0);"><h1>HOME</h1></a></div>
@@ -18,6 +19,8 @@
             <div class="flex-child"><a href="../Drawing/index.html" style="color: black;"><h1>DRAWINGS</h1></a></div>
         </div>
     </div>
-    <div style="background-image: url('../image/Amy\ Ai\ Resume.svg'); background-size: cover; width: 90vw;"></div>
+    <div>
+        <img src="../image/Amy Ai Resume.svg" alt="Resume" style="height: 100vw;">
+    </div>
 </body>
 </html>
