--- a/gallery/Index.html
+++ b/gallery/Index.html
@@ -5,13 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="../style.css"> 
+    <link rel="shortcut icon" type="image/x-icon" href="/image/favicon.ico" />
 </head>
 <body style="background-color: black; background-image: url('../image/Background1.gif'); background-size: cover;">
     <div class="grid-gallery">
-        <div style="width: 80vw;"></div>
+        <div style="width: 80vw; text-align: left;">
+            <div style="font-size: 30px; font-family: 'Inter'; color: white; font-weight: 100;">CATCH TO VIEW</div>
+        </div>
         <div class="bar-gallery">
             <div><a href="../index.html" style="color: rgb(0, 0, 0);">HOMEPAGE</a></div>
-            <div><a href="flashlight.html" style="color: rgb(0, 0, 0);">Change Mode</a></div>
+            <div><a href="flashlight.html" style="color: rgb(255, 255, 255); text-decoration: none;">Change Mode</a></div>
             <div><a href="../Drawing/index.html" style="color: rgb(0, 0, 0);">Drawing</a></div>
         </div>
     </div>
