--- a/gallery/flashlight.html
+++ b/gallery/flashlight.html
@@ -22,10 +22,12 @@
                 <img src="../image/G9.png" alt="Image 9">
             </div>
         </div> -->
-        <div style="width: 80vw;"></div>
+        <div style="width: 80vw;">
+            <div style="font-size: 30px; font-family: 'Inter'; color: white; font-weight: 100;">LIGHT TO DISCOVER</div>
+        </div>
         <div class="bar-gallery">
             <div><a href="../index.html" style="color: rgb(0, 0, 0);">HOMEPAGE</a></div>
-            <div><a href="Index.html" style="color: rgb(0, 0, 0);">Change Mode</a></div>
+            <div><a href="Index.html" style="color: rgb(255, 255, 255); text-decoration: none;">Change Mode</a></div>
             <div><a href="../Drawing/index.html" style="color: rgb(0, 0, 0);">Drawing</a></div>
         </div>
     </div>
