--- a/Drawing/index.html
+++ b/Drawing/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="../stylegallery.css"> 
+    <link rel="shortcut icon" type="image/x-icon" href="/image/favicon.ico" />
 </head>
 <body style="background-image: url('../image/Drawing.svg'); background-size: cover; background-color: black;">
     <div class="glow-cursor"></div>
