--- a/projects/WateringCan.html
+++ b/projects/WateringCan.html
@@ -8,19 +8,18 @@
 </head>
 <body>
     <div class="grid">
-        <div><h1>HERSHEY'S WATERING CAN</h1></div>
+        <div style="font-family: 'Inter'; font-size: 2vw; text-align: center; font-weight: 200;">HERSHEY'S WATERING CAN</div>
         <div>
-            <a href="../index.html" style="color: black;"><h1>HOMEPAGE</h1></a>
+            <a href="../index.html" style="color: black; font-family: 'Inter'; font-size: 2vw; text-align: center; font-weight: 200;">HOMEPAGE</a>
         </div>
     </div>
     <div class="image-wall">
         <img src="../image/Untitled design.svg" alt="advertisement" style="max-width: 100vw; max-height: 100vh; background-image: url('https://media0.giphy.com/media/JQ4selcg3iSTvU1wmX/giphy.gif'); background-size: 20vh;">
+        <img src="../image/Hershey Watering can2.svg" alt="Jacket" style="max-width: 100vw; max-height: 100vh;">
+        <img src="../image/Hershey Watering can3.svg" alt="Jacket" style="max-width: 100vw; max-height: 100vh;">
+        <img src="../image/Hershey Watering can4.svg" alt="Jacket" style="max-width: 100vw; max-height: 100vh;">
         <img src="../image/Hershey Watering can.jpg" alt="Jacket" style="max-width: 100vw; max-height: 100vh;">
-        <img src="../image/Hershey Watering can2.jpg" alt="Jacket" style="max-width: 100vw; max-height: 100vh;">
-        <img src="../image/Hershey Watering can3.jpg" alt="Jacket" style="max-width: 100vw; max-height: 100vh;">
-        <img src="../image/Hershey Watering can4.jpg" alt="Jacket" style="max-width: 100vw; max-height: 100vh;">
-        <img src="../image/Hershey Watering can5.jpg" alt="Jacket" style="max-width: 100vw; max-height: 100vh;">
     </div>
-    <a href="../index.html" style="text-align: center; color: rgb(0, 0, 0);"><h1>BACK TO HOME PAGE</h1></a>
+    <div style="text-align: center;"><a href="../index.html" style="color: black; font-family: 'Inter'; font-size: 2vw; font-weight: 200;">BACK TO HOME PAGE</a></div>
 </body>
 </html>
