--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                 <div style="height: 10px;"></div>
                 *How design influences human behaviour.
                 <br>
-                *How huma-centered design can iteratively
+                *How human-centered design can iteratively
                 <br>evolve to better meetusers' needs.
             </div>
             <div style="width: 6vw;"></div>
